// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render 1`] = `
<Icon__StyledIcon
  as="i"
  className=" fas fa-test"
  fixedWidth={false}
  onClick={null}
  type="button"
/>
`;

exports[`<Icon /> should render placed tooltip when tipPlacement props defined 1`] = `
<Tooltip
  position="bottom"
  tip="Tooltip"
>
  <Icon__StyledIcon
    as="i"
    className=" fas fa-test"
    fixedWidth={false}
    onClick={null}
    type="button"
  />
</Tooltip>
`;

exports[`<Icon /> should render tooltip when tip props is defined 1`] = `
<Tooltip
  position="top"
  tip="Tooltip"
>
  <Icon__StyledIcon
    as="i"
    className=" fas fa-test"
    fixedWidth={false}
    onClick={null}
    type="button"
  />
</Tooltip>
`;

exports[`<Icon /> should render when [fixedWith=true] 1`] = `
<Icon__StyledIcon
  as="i"
  className=" fas fa-test"
  fixedWidth={true}
  onClick={null}
  type="button"
/>
`;

exports[`<Icon /> should render when className prop provided 1`] = `
<Icon__StyledIcon
  as="i"
  className="heavy  fas fa-test"
  fixedWidth={false}
  onClick={null}
  type="button"
/>
`;
